application改回原本的版型

--- a/public/css/_common.scss
+++ b/public/css/_common.scss
@@ -1460,6 +1460,9 @@ main {
             &_text {
                 width: 100%;
                 padding: 20px 0 50px;
+                h2 {
+                    font-size: 28px;
+                }
             }
             &_pic {
                 // transform: translate(5px,-20px);
