--- a/public/css/_application.scss
+++ b/public/css/_application.scss
@@ -50,7 +50,7 @@
         // padding-left: calc((100vw - 960px)/2 + 20px + 40px);
         margin-top: 40px;
         &_pic {
-            // width: 50%;
+            width: 50%;
             .content_detail_pic_inner {
                 width: 100%;
                 // padding-bottom: 60%;
@@ -58,11 +58,17 @@
         }
         &_text {
             width: 50%;
+            padding-left: 40px;
+            padding-top: 0;
+            padding-bottom: 0;
         }
         &_content {
             color: #565656;
             font-weight: normal;
             margin-top: 20px;
+        }
+        &_inner {
+            margin-bottom: 80px;
         }
     }
     &_pdList {
@@ -105,18 +111,28 @@
                 max-width: inherit;
             }
         }
+        &_detail {
+            &_pic {
+                width: 100%;
+            }
+            &_text {
+                width: 100%;
+                padding-top: 20px;
+                padding-left: 0;
+            }
+        }
     }
 }
 
 @media screen and (max-width:767.98px) {
     .application {
         &_detail {
-            &_pic {
-                width: 90%;
-            }
-            &_text {
-                width: 100%;
-            }
+            // &_pic {
+            //     width: 90%;
+            // }
+            // &_text {
+            //     width: 100%;
+            // }
         }
         &_pdList {
             padding-left: 0;
